--- a/style.css
+++ b/style.css
@@ -15,13 +15,12 @@
 }
 
 body {
-  margin: 0px;
-  background-color: #1F2937;
+  margin: 0rem;
 }
 
 header {
   background-color: #1F2937;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   padding: 2%;
   position: fixed;
@@ -53,37 +52,37 @@ header {
   text-decoration: none;
 }
 
-.row {
-  display: flex; 
+.main {
+  background-color: #fff;
 }
 
-.content {
-  margin-top: 50px;
-  background-color: #fff;
+.row {
+  display: flex; 
 }
 
 .hero {
   background-color: #1F2937;
   padding: 2%;
+  padding-top: 7%;
 }
 .hero-detail {
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 3.12rem;
   flex-direction: column;
   flex-grow: 1;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   color: #fff;
   margin-left: 5%;
 }
 
 .hero-detail > h1 {
-  font-weight: 48px;
+  font-weight: 3em;
   padding-bottom: 0%;
 }
 
 .hero-detail > p {
-  font-weight: 18px;
+  font-weight: 1.12em;
   filter: contrast(70%);
   padding-top: 0%;
   padding-bottom: 0%;
@@ -95,14 +94,14 @@ header {
   flex-grow: 1;
   justify-content: center;
   margin-right: 5%;
-  border-radius: 5px;
+  border-radius: 0.31rem;
   width: 20%;
   height: 10%;
-  padding-left:5px; 
-  padding-right:5px; 
+  padding-left:0.31rem; 
+  padding-right:0.31rem; 
   background-color: #3882f6;
   color: #fff;
-  font-size: 18px;
+  font-size: 1.12em;
   border: none;
 }
 
@@ -118,30 +117,18 @@ header {
   height: auto;
 }
 
-.quote-block {
-  flex-direction: column;
-  background: #E5E7EB;
-  color: #1F2937;
-  padding: 10%;
-}
-
-.quote-block-text {
-  font-family: Roboto;
-  font-weight: italic;
-  font-size: 36px;
-  text-align: justify;
-}
-
-.quote-block-author {
-  font-family: Roboto;
-  font-weight: bold;
-  text-align: right;
-}
-
 .info-block {
   padding: 5%;
   margin-left: 10%;
   margin-right: 10%;
+}
+
+.info-title > h2 {
+  font-family: Roboto, sans-serif;
+  font-weight: bold;
+  font-size: 2.25em;
+  text-align: center;
+  padding-bottom: 5%;
 }
 
 .info-items {
@@ -155,82 +142,96 @@ header {
   justify-content: center;
 }
 
-.info-title {
-  font-family: Roboto;
-  font-weight: bold;
-  font-size: 36px;
-  text-align: center;
-  padding-bottom: 5%;
-}
-
 .info-item-image {
-  border-radius: 5px;
+  border-radius: 0.31rem;
   border: 2px solid #3882f6;
-  height: 150px;
-  width: 150px;
+  height: 9.37rem;
+  width: 9.37rem;
 }
 
 .info-item-text {
   text-align: justify;
   overflow-wrap: break-word;
-  font-family: Roboto;
-  font-size: 14xpx;
+  font-family: Roboto, sans-serif;
+  font-size: 0.87em;
   font-weight: normal;
   text-align: center;
 }
 
-.detail {
+.quote-block {
+  flex-direction: column;
+  background: #E5E7EB;
+  color: #1F2937;
+  padding: 10%;
+}
+
+.quote-block-text {
+  font-family: Roboto, sans-serif;
+  font-weight: italic;
+  font-size: 2.25em;
+  text-align: justify;
+}
+
+.quote-block-author {
+  display: flex;
+  font-family: Roboto, sans-serif;
+  font-weight: bold;
+  flex-direction: row-reverse;
+}
+
+.action {
   background-color: #3882f6;
   padding: 3%;
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 5%;
   margin-bottom: 5%;
-  border-radius: 5px;
+  border-radius: 0.31rem;
 }
 .action-detail {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   color: #fff;
-  margin-left: 5%;
 }
 
 .action-detail-title {
-  font-family: Roboto;
+  display: flex;
+  font-family: Roboto, sans-serif;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 1.5em;
   text-align: justify;
 }
 
 .action-detail-description {
-  font-family: Roboto;
+  display: flex;
+  font-family: Roboto, sans-serif;
   font-weight: normal;
-  font-size: 12px;
+  font-size: 0.75em;
   text-align: justify;
 }
 
-.detail > button {
+.action > button {
   display: flex;
   flex-shrink:0;
   justify-content: center;
   margin-right: 5%;
-  border-radius: 5px;
+  border-radius: 0.31rem;
   width: 20%;
   height: 10%;
-  padding-left:5px; 
-  padding-right:5px; 
+  padding-left: 0.31rem; 
+  padding-right: 0.31rem; 
   background-color: #3882f6;
   color: #fff;
-  font-size: 18px;
-  border: 2px solid #fff; 
+  font-size: 1.12em;
+  border: 0.12rem solid #fff; 
 }
 
 .fixed-footer {
   background-color: #1F2937;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   color: #fff;
   text-align: center;
